update to mc 1.20.6 and java 21